<resources>
    <string name="app_name">Diplomová práca</string>
    <string name="training_chip_label">Tréning</string>

    <string name="login_title">Prihlásenie</string>
    <string name="login_label_username">Používateľské meno:</string>
    <string name="login_hint_username">Zadajte používateľské meno</string>
    <string name="login_label_password">Heslo</string>
    <string name="login_hint_password">Zadajte heslo</string>
    <string name="login_text_forgot_password">Zabudli ste heslo?</string>
    <string name="login_text_register">Nemáte účet? Zaregistrujte sa</string>
    <string name="login_button_submit">Prihlásiť sa</string>

    <string name="signup_title">Registrácia</string>
    <string name="login_label_email">E-mail</string>
    <string name="login_hint_email">Zadajte e-mail</string>
    <string name="signup_label_password">Heslo</string>
    <string name="signup_hint_password">Zadajte heslo</string>
    <string name="signup_label_password_confirm">Potvrďte heslo</string>
    <string name="signup_hint_password_confirm">Znova zadajte heslo</string>
    <string name="signup_text_login">Už máte účet? Prihláste sa</string>
    <string name="signup_button_register">Registrovať sa</string>
    <string name="signup_label_email">E-mail</string>
    <string name="signup_hint_email">Zadajte e-mail</string>

    <string name="additional_info_title">Dodatočné informácie</string>
    <string name="additional_info_label_age">Vek</string>
    <string name="additional_info_hint_age">Zadajte svoj vek</string>
    <string name="additional_info_label_gender">Pohlavie</string>
    <string name="additional_info_gender_male">Muž</string>
    <string name="additional_info_gender_female">Žena</string>
    <string name="additional_info_label_hand">Dominantná ruka</string>
    <string name="additional_info_hand_right">Pravák</string>
    <string name="additional_info_hand_left">Ľavák</string>
    <string name="additional_info_button_confirm">Potvrdiť</string>

    <string name="training_common_title">Spoločná veta</string>
    <string name="training_common_sentence_default">Dnes je vonku pekne, idem von so psom na dvor a budem tam asi hodinu, bude to fajn.</string>
    <string name="training_hint_repeat_common">Napíšte vetu uvedenú vyššie…</string>
    <string name="training_progress_prefix">0 / 15</string>
    <string name="training_progress_format">%1$d / %2$d</string>
    <string name="training_button_continue">Pokračovať v trénovaní</string>
    <string name="training_error_not_logged_in">Používateľ nie je prihlásený. Prosím, prihláste sa znova.</string>
    <string name="training_error_status_update">Nahrávanie prebehlo úspešne, ale nepodarilo sa aktualizovať stav používateľa.</string>
    <string name="training_error_upload_failed">Nahrávanie dát zlyhalo. Skúste to prosím znova.</string>

    <string name="training_personal_title">Osobná veta</string>
    <string name="training_personal_title_select">Vyberte si svoju osobnú vetu</string>
    <string name="training_personal_hint_input">Sem napíšte svoju vetu…</string>
    <string name="training_personal_button_set">Nastaviť moju vetu</string>

    <string name="training_personal_hint_repeat">Zopakujte svoju vetu…</string>
    <string name="training_button_next">Pokračovať</string>
    <string name="training_personal_uploading_status">Prebieha spracovanie údajov…</string>
    <string name="training_common_uploading_status">Prebieha spracovanie údajov…</string>
    <string name="training_personal_model_training_status">Modely sa aktuálne trénujú. Tento krok môže trvať niekoľko minút, prosím čakajte…</string>
    <string name="training_personal_model_training_success">Modely boli úspešne dotrénované.</string>
    <string name="training_personal_error_sentence_save">Nepodarilo sa uložiť vetu do profilu.</string>
    <string name="training_personal_error_model_training_failed">Trénovanie modelov zlyhalo. Skúste to prosím znova.</string>
    <string name="training_personal_error_state_save_failed">Modely sú dotrénované, ale nepodarilo sa uložiť stav používateľa. Skúste to znova.</string>
    <string name="training_personal_error_finish_failed">Počas dokončovania osobného tréningu nastala chyba. Skúste to prosím znova.</string>

    <string name="training_toast_empty_sentence">Prosím, zadajte vetu.</string>
    <string name="training_toast_attempt_saved">Pokus %1$d / %2$d uložený</string>
    <string name="training_toast_sentence_too_short">Veta je príliš krátka (minimum %1$d znakov). Aktuálne: %2$d.</string>
    <string name="training_toast_sentence_too_few_words">Veta musí mať aspoň %1$d slov. Aktuálne: %2$d.</string>

    <string name="auth_title">Autentifikácia</string>
    <string name="auth_mode_general_sentence">Všeobecná veta</string>
    <string name="auth_mode_personal_sentence">Osobná veta</string>
    <string name="auth_button_logout">Odhlásiť</string>
    <string name="auth_hint">Napíšte vetu…</string>
    <string name="auth_button">Overiť</string>
    <string name="auth_ready">Pripravené na autentifikáciu</string>
    <string name="auth_result_dialog_ok">OK</string>
    <string name="auth_result_dialog_title_success">Autentifikácia úspešná</string>
    <string name="auth_result_dialog_title_error">Autentifikácia neúspešná</string>
    <string name="auth_result_message_success">Vaša identita bola úspešne overená.</string>
    <string name="auth_result_message_rejected">Vašu identitu sa nepodarilo overiť. Skúste to prosím znova.</string>
    <string name="auth_result_message_server_error">Počas overovania nastal problém so serverom. Skúste to prosím o chvíľu znova.</string>
    <string name="auth_text_mismatch">Zadaný text sa nezhoduje s požadovanou vetou.</string>
    <string name="auth_error_user_not_logged_in">Používateľ nie je prihlásený.</string>
    <string name="auth_error_personal_sentence_not_found">Osobná veta nebola nájdená.</string>
    <string name="auth_error_target_sentence_missing">Cieľová veta nie je načítaná.</string>
    <string name="auth_error_profile_load_failed">Nepodarilo sa načítať profil používateľa.</string>
    <string name="auth_error_upload_failed">Počas overovania nastala chyba. Skúste to prosím znova.</string>

    <string name="login_toast_success">Prihlásenie bolo úspešné.</string>
    <string name="login_toast_finish_common_training">Prosím, dokončite spoločný tréning.</string>
    <string name="login_toast_finish_personal_training">Prosím, dokončite osobný tréning.</string>

    <string name="signup_toast_success">Registrácia bola úspešne dokončená.</string>
    <string name="signup_error_registration_failed">Registrácia zlyhala. Skontrolujte zadané údaje a skúste to znova.</string>
    <string name="signup_error_profile_save_failed">Registrácia prebehla, ale nepodarilo sa uložiť profil používateľa.</string>

</resources>