<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:fillViewport="true"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="28dp"
        android:paddingTop="48dp"
        android:paddingBottom="34dp">

        <View
            android:id="@+id/topAccent"
            android:layout_width="58dp"
            android:layout_height="6dp"
            android:background="@drawable/bg_top_accent" />

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.DiplomovaPraca.ScreenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/login_title" />

        <TextView
            android:id="@+id/labelEmail"
            style="@style/TextAppearance.DiplomovaPraca.SectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/login_label_email" />

        <EditText
            android:id="@+id/email"
            style="@style/Widget.DiplomovaPraca.OutlinedInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:hint="@string/login_hint_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/labelPassword"
            style="@style/TextAppearance.DiplomovaPraca.SectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login_label_password" />

        <EditText
            android:id="@+id/password"
            style="@style/Widget.DiplomovaPraca.OutlinedInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textRegister"
            style="@style/TextAppearance.DiplomovaPraca.Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_text_register" />

        <FrameLayout
            android:id="@+id/loginButtonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                style="@style/Widget.DiplomovaPraca.PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_submit" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:indeterminateTint="@android:color/white"
                android:visibility="gone" />
        </FrameLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

